# codingbycoding.github.io

./: .gitignore  CNAME  Jenkinsfile  README.md  index.html  run_target.mk  setup_vars.mk
Lua/: config  luaclibtest.c  luamain.c  luamain.lua  luamodule.lua
SQL/: sql.sql
TAOCP/: taocp.cpp
adam/xnet/: README  header.h  main.c  schedule.txt  tutil.h  tutils.c  tutils.h  utils.h  xnet  xnet.c
algo/: algo_intro.cpp  calgo.c  main.cpp
boost/: boost_asio.cpp  boost_asio_socket_cli.cpp  boost_asio_socket_serv.cpp  boost_container.cpp  boost_filesystem.cpp  boost_function.cpp  boost_python.cpp  boost_test_main.cpp  boost_thread.cpp  boost_unit_test.cpp  boostmain.cpp  boostmain.cpp~  build.bat  config_file.conf  ptree.conf  ptree.json  test_main.cpp
c/: c.c
c/apue/: apue.c  apue_io.c  apue_socket.c
c/c_cmake/: CMakeLists.txt  Makefile  test  test.c
c/c_socket/: Makefile  socket_tcp_cli.c  socket_tcp_serv.c  socket_udp_cli.c  socket_udp_serv.c
c/glib_test/: glib_test.c
c/iso/: iso9899_1999.c
c/libs/glib/: testglib.c
c/libs/glibc/: testglibc.c
c/libs/iconv/: iconvtest.c
c/libs/libcurl/: post_json.c  testcurl.c
c/libs/msgpack-c/: msgpack-c-test.c
c/unp_3/: unp_3.c
code_complete/: code_complete.cpp
cpp/CPP_Primer/: test.cpp
cpp/c++11/: CMakeLists.txt  c++11.cpp
cpp/cpp_cmake/: CMakeLists.txt  Makefile  hello.cpp
cpp/effective/: effective.cpp  effective.h  main.cpp
cpp/effective_cpp/: a.cpp  a.h  b.cpp  b.h  effective.cpp  effective.h  main.cpp
cpp/effective_stl/: effective_stl.cpp
cpp/hiredis/: CfgBattlePoint.xml  CfgHero.xml  CfgHeroSkill.xml  CfgRobot.xml  CfgRobotName.xml  CfgSkillLV.xml  common.pb.cc  common.pb.h  conf.cpp  conf.h  final_test_robot.cpp  test.cpp  testrobot.cpp  utils.cpp  utils.h  xml_utils.cpp  xml_utils.h
cpp/inside_cpp_obj/: inside_cpp_obj.cpp  inside_cpp_obj.h
cpp/libs/mysql/: testmysql.cpp
cpp/libs/protobuf/: test.cpp  testbaseproto.proto  testproto.proto
cpp/libs/snappy/: testsnappy.cpp
cpp/libs/testlib/: main.cpp  printer.cpp  printer.h
design_patterns/: factory.cc
erlang/: test.erl  test_erl.erl
html/: styles.css  test.html
jack/: main.c
java/: GenericJava.java  NativeTester.c  NativeTester.h  Test.bat  Test.java  TestCollection.java  TestHttp.java  TestI18N.java  TestJDBC.java  TestNative.c  TestNative.h  TestNative.java  TestNet.java  TestStream.java  TestXML.java  Welcome.java  appletjava.html  filename.txt  manifest.mf
java/com/wangyongjian/test/: Employee.java  Manager.java  Person  Person.java  SubWelcome.java
java/libs/gson/: testgson.java  testgson.json
java/libs/log4j-1.x/: note_log4j.txt  testlog4j_1_x.java  testlog4j_1_x.properties
javascript/: lottery.html  testjs.js
latex/: test.tex
leetcode/: two-sum.cpp
linux/: socktest.c  test.c
metaprogramming/: metamain.cpp
misc/: common.h  lili.csv  r_p_s.cpp  websites.txt
network/: pyHTTP.py
network/effective_tcp_ip/: effective_tcp_ip.cpp  effective_tcp_ip_cli.c  effective_tcp_ip_header.h  effective_tcp_ip_serv.c  utils.c  utils.h
opencv/: CMakeLists.txt  EmacsIcon.xcf  opencv.cpp
openssl/: test.c
php/: phptest.php
python/: DSA.cfg  config.xml  crunpy.c  filename.py  pyDSA.py  pyGate.py  pyLaunch.py  pyTk.py  pycli.py  pyext.c  pyre.py  pyserv.py  pyt.py  pytest.py  pythread.py  pyurl.py  pyxml.py  services.xml  services.xml.tmp.xml  services.xml.write.xml  setup.py  test.cfg  test.py  testsnappy.py
python/testegg/: __main__.py  testegg.py
regex/: regex.sh  test.html  test.sh
review/cpp/: Makefile  cpp.cpp  cpp.h
schedule/: schedule.org
sh/: test.sh
stl/: Makefile  OverView.txt  algorithm.cpp  stlmain.cpp
taomee/: taomee.org
test/: Makefile  Makefile.mint.hasee  jack.txt  test.cpp  test.html  test.ii  test.org  test.s  test.txt  testc.c  testcpp.cpp  testreloadglobaldata.cpp  testreloadmain.cpp  testreloadmodule.cpp  testreloadmodule.hpp
test/testreload/: testreloadglobaldata.cpp  testreloadmain.cpp  testreloadmodule.cpp  testreloadmodule.hpp
tm/: tm.org
tools/: etags_cmd.bat  testregextohandlecontent.html  testregextohandlecontent.txt
utils/: i.txt  utils.cpp
xml/: Test.dtd  Test.xml
(+1 files in other folders)
